crates/astra-cli/src/tui/task_list/snapshots/astra__tui__task_list__snapshot_tests__task_board_blocked_by_badge_80.snap
---
source: crates/astra-cli/src/tui/task_list/snapshot_tests.rs
assertion_line: 152
expression: "draw(&tasks, 80, 24, false)"
---
• prep-a
◻ prep-c
◻ downstream-work · waiting on #1, #3
