crates/astra-cli/src/tui/task_list/snapshots/astra__tui__task_list__snapshot_tests__task_board_narrow_header_45.snap
---
source: crates/astra-cli/src/tui/task_list/snapshot_tests.rs
expression: "draw(&tasks, 45, 24, true)"
---
Tasks · 1 working · 1 queued · 1 done
• b
◻ c
✔ a
